--- a/package.json
+++ b/package.json
@@ -21,12 +21,19 @@
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
+    "angular-bootstrap-md": "^8.8.1",
     "bootstrap": "^4.4.1",
     "cdk-table-exporter": "^1.2.2",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "install": "^0.13.0",
     "jquery": "^3.4.1",
     "mat-table-exporter": "^1.2.2",
+    "mdbootstrap": "^4.11.0",
+    "ng-bootstrap": "^1.6.3",
+    "ngx-bootstrap": "^5.2.0",
+    "npm": "^6.13.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
