--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular-bootstrap-md": "^8.8.1",
     "bootstrap": "^4.4.1",
     "cdk-table-exporter": "^1.2.2",
+    "chart.js": "^2.9.3",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "install": "^0.13.0",
@@ -32,6 +33,7 @@
     "mat-table-exporter": "^1.2.2",
     "mdbootstrap": "^4.11.0",
     "ng-bootstrap": "^1.6.3",
+    "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.2.0",
     "npm": "^6.13.4",
     "rxjs": "~6.4.0",
