report page error solved

--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "mat-table-exporter": "^1.2.2",
     "mdbootstrap": "^4.11.0",
     "ng-bootstrap": "^1.6.3",
+    "ng-pick-datetime": "^7.0.0",
     "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.2.0",
+    "ngx-daterangepicker-material": "^2.2.0",
     "npm": "^6.13.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
