--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.2.0",
     "ngx-daterangepicker-material": "^2.2.0",
+    "ngx-pagination": "^5.0.0",
     "npm": "^6.13.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
