--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ng-pick-datetime": "^7.0.0",
     "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.2.0",
+    "ngx-daterangepicker-material": "^4.0.1",
     "ngx-pagination": "^5.0.0",
     "npm": "^6.13.4",
     "rxjs": "~6.4.0",
